# D4Green

./: Cargo.toml
src/: commune.rs  connector.rs  db.rs  departement.rs  main.rs  region.rs  statistic.rs
static/css/: index.css  style.css
static/js/: index.js
templates/: index.html.tera  style.css
templates/css/: index.css
