[package]
name = "eclipsed4g"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rocket = "0.4.5"
cdrs = { version = "2" }
cdrs_helpers_derive = "0.1.0"
uuid = "0.7"
time = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
printpdf = "0.3.2"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "tera_templates","serve","json"]

